# msc-muia-2026

./: .gitignore  README.md
core/: README.md  config.schema.json  pyproject.toml  pyrightconfig.json  run_pipeline.py
core/detector/: pyproject.toml
core/detector/src/detector/: _detector.py  _processor.py  inference.py  main.py  preprocessing.py
core/detector/tests/: conftest.py  test_detector.py  test_processor.py
core/explainer/: pyproject.toml
core/explainer/src/explainer/: consumer.py  main.py  prompts.py
core/explainer/src/explainer/audit/: audit.py
core/explainer/src/explainer/engines/: __init__.py  _base.py  _factory.py  repl.py  rlm.py  single_pass.py
core/explainer/src/explainer/llm/: __init__.py  _base_llm.py  _llm_factory.py  ollama.py  openai.py  runpod.py
core/shared_lib/: README.md  pyproject.toml
core/shared_lib/src/shared_lib/: __init__.py  config.py  generate_schema.py  logger.py  utils.py
core/shared_lib/src/shared_lib/messaging/: __init__.py  mqtt.py  rabbitmq.py  topics.py
core/shared_lib/src/shared_lib/schemas/: __init__.py  anomaly.py  jobs.py  telemetry.py
core/simulator/: pyproject.toml
core/simulator/src/simulator/: _controller.py  _reader.py  _simulator.py  main.py
core/simulator/tests/: conftest.py  test_controller.py  test_reader.py  test_simulator.py
core/test-utils/: pyproject.toml
core/test-utils/src/test_utils/: builders.py  fake_mqtt.py  fake_rabbitmq.py
mocks/: README.md
models/: README.md
models/ollama/: gemma.mf  qwen2.5.mf
services/: README.md  compose.yml
training/: README.md  lstm_autoencoder_solar_anomaly_detection.ipynb  pyproject.toml
