[project]
name = "msc-muia-2026"
version = "0.1.0"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["shared_lib", "simulator", "test-utils", "detector"]

[dependency-groups]
dev = ["ruff>=0.11"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
norecursedirs = ["simulator", "detector", "shared_lib", "test-utils", ".venv"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TC",  # flake8-type-checking
    "RUF", # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["shared_lib", "simulator", "detector", "explainer", "test_utils"]
