[project]
name = "msc-muia-training"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "joblib>=1.4",
    "kagglehub>=0.3",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "scikit-learn>=1.5",
    "tensorflow>=2.18",
    "jupyter>=1.1",
    "ipykernel>=6.29",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort
ignore = ["E501"]          # largo de línea no crítico en notebooks

[tool.ruff.format]
# habilita formato de celdas .ipynb

