[project]
name = "detector"
version = "0.0.0"
description = "LSTM-based anomaly detector for solar telemetry"
requires-python = ">=3.13"
dependencies = [
    "shared-lib",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.6",
    "tensorflow>=2.19",
]

[dependency-groups]
dev = ["pytest>=8.0", "test-utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
shared-lib = { workspace = true }
test-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/detector"]

[project.scripts]
detector = "detector.main:main"
