[project]
name = "explainer"
version = "0.0.0"
description = "LLM-based anomaly explainer for solar telemetry"
requires-python = ">=3.13"
dependencies = [
    "shared-lib",
    "openai>=2.21.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
shared-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/explainer"]

[project.scripts]
explainer = "explainer.main:main"
