[project]
name = "shared-lib"
version = "0.0.0"
description = "Shared configuration and utilities for the solar pipeline"
requires-python = ">=3.13"
dependencies = [
    "paho-mqtt>=2.0",
    "pika>=1.3",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared_lib"]

[project.scripts]
generate-schema = "shared_lib.generate_schema:generate_schema"
