[project]
name = "simulator"
version = "0.1.0"
description = "MQTT simulator that publishes solar telemetry from CSV mock data"
requires-python = ">=3.13"
dependencies = [
    "shared-lib",
    "paho-mqtt>=2.0",
]

[dependency-groups]
dev = ["pytest>=8.0", "test-utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.uv.sources]
shared-lib = { workspace = true }
test-utils = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simulator"]

[project.scripts]
simulator = "simulator.main:main"
