[project]
name = "test-utils"
version = "0.0.0"
description = "Shared fakes and builders for pipeline unit tests"
requires-python = ">=3.13"
dependencies = ["shared-lib"]

[tool.uv.sources]
shared-lib = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_utils"]
